<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>ArmorStandEditor-parent</artifactId>
        <groupId>de.rapha149.armorstandeditor</groupId>
        <version>1.5.14</version>
    </parent>

    <artifactId>ArmorStandEditor</artifactId>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.18-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.triumphteam</groupId>
            <artifactId>triumph-gui</artifactId>
            <version>3.1.10</version>
        </dependency>
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.10.5-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240303</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.21.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-plain</artifactId>
            <version>4.21.0</version>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-abstraction</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_18_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_18_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_19_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_19_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_19_R3</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_20_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_20_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_20_R3</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_20_R4</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_21_R1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_21_R2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_21_R3</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.armorstandeditor</groupId>
            <artifactId>ArmorStandEditor-1_21_R4</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
